--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>My Free Landing Page</title>
+  <meta name="description" content="A short summary of your page for search and social media.">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body{font-family:system-ui,sans-serif;background:#f9fafb}
+    .hero{padding:6rem 1rem;text-align:center}
+    .btn-main{padding:.75rem 1.25rem;font-weight:600}
+  </style>
+</head>
+<body>
+  <section class="hero">
+    <div class="container">
+      <h1 class="display-5 fw-bold mb-3">Get My Free Productivity Playbook</h1>
+      <p class="lead mb-4 text-muted">Simple steps to work smarter and save 5+ hours per week.</p>
+      <a href="#signup" class="btn btn-primary btn-main">Get the Free Guide</a>
+    </div>
+  </section>
 
+  <section class="py-5" id="signup">
+    <div class="container text-center">
+      <h3>Sign up to receive it</h3>
+      <form action="https://formspree.io/f/your-id" method="POST" class="mt-3" style="max-width:400px;margin:auto;">
+        <input name="email" type="email" class="form-control mb-2" placeholder="Your email address" required>
+        <button class="btn btn-primary w-100" type="submit">Send it to me →</button>
+      </form>
+      <p class="text-muted small mt-2">No spam. Unsubscribe anytime.</p>
+    </div>
+  </section>
+
+  <footer class="text-center py-4 small text-muted">
+    © 2025 Your Name
+  </footer>
+</body>
+  </html>
